--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 requests
-django~=3.1.1
-pytest~=6.0.1
+django
+pytest
 pytest-django
-djangorestframework~=3.11.1
+djangorestframework
 djangorestframework-simplejwt
 
-django-filter~=2.3.0
+django-filter
